# 8bit_emulator

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp
src/emulator/: config.hpp
src/emulator/clock/: clock.cpp  clock.hpp
src/emulator/computer/: computer.cpp  computer.hpp
src/emulator/register/: register.cpp  register.hpp
src/emulator/renderer/: renderer.cpp  renderer.hpp
src/include/: clock.hpp  computer.hpp  config.hpp  logger.hpp  pch.hpp  register.hpp  renderer.hpp
src/lib/: clock.cpp  computer.cpp  logger.cpp  register.cpp  renderer.cpp
